# f2q

./: .gitignore  Cargo.toml  Changelog.md  README.md  justfile
.github/workflows/: docs.yml  fmt.yml  test.yml
examples/: dyn_hamil.rs  jordan_wigner_32qb.rs  jordan_wigner_64qb.rs
src/: code.rs  codes.rs  hamil.rs  lib.rs  map.rs  mapping.rs  maps.rs  math.rs  pauli.rs  q2.rs  qubit.rs  qubits.rs  repr.rs  sec.rs  secnd.rs  secq.rs  serialize.rs  terms.rs  tests.rs
src/code/: fermions.rs  qubits.rs
src/codes/: fermions.rs  qubits.rs
src/map/: jordan_wigner.rs
src/maps/: jordan_wigner.rs
src/repr/: conversions.rs  representations.rs
src/serialize/: fermions.rs  qubits.rs
src/tests/: fermions.rs  jordan_wigner.rs  math.rs  qubit.rs  terms.rs
tests/: lib.rs
tests/code/fermions/: mod.rs
tests/code/qubits/: mod.rs  pauli.rs  paulicode.rs  pauligroup.rs  pauliop.rs
tests/codes/: mod.rs
tests/codes/fermions/: mod.rs
tests/codes/qubits/: mod.rs  pauli.rs  paulicode.rs  paulicodes.rs  pauligroup.rs
tests/map/: jordan_wigner.rs  jordan_wigner_elem.rs  mod.rs
tests/maps/: mod.rs
tests/math/: mod.rs
tests/serialize/: fermicode.rs  fermions.rs  fermisum.rs  mod.rs  pauli.rs  paulicode.rs  paulicodes.json  pauliop.rs  paulisum.rs  sumrepr.json
tests/terms/: mod.rs
